--- a/Logistic_Regression.Rmd
+++ b/Logistic_Regression.Rmd
@@ -27,6 +27,16 @@ This data analysis exercise was designed by Martyn Kirk MAppEpid PhD and Katie G
 
 +	utri.csv
 
+Packages required:
+
++ [epitools](https://cran.r-project.org/web/packages/epitools/index.html)
++ [MASS](https://cran.r-project.org/web/packages/MASS/index.html)
++ [lmtest](https://cran.r-project.org/web/packages/lmtest/index.html)
++ [margins](https://cran.r-project.org/web/packages/margins/index.html)
++ [ResourceSelection](https://cran.r-project.org/web/packages/ResourceSelection/index.html)
++ [pROC](https://cran.r-project.org/web/packages/pROC/index.html)
+
+
 This practical exercise is based on the following textbooks:
 
 *Jewell N. Statistics for Epidemiology. 2004. Chapman & Hall/CRC, New York.*
@@ -36,6 +46,43 @@ This practical exercise is based on the following textbooks:
 *Hosmer DW, Lemeshow S & Sturdivant RX. Applied Logistic Regression. Third Edition. 2013 John Wiley and Sons, New York.*
 
 *Hilbe JM. Logistic Regression Models. 2009 Chapman & Hall/CRC, Boca Raton.*
+
+
+
+
+``` {r, include=FALSE}
+if (!require(epitools)) {
+    install.packages("epitools")
+    require(epitools)
+}
+if (!require(MASS)) {
+    install.packages("MASS")
+    require(MASS)
+}
+if (!require(lmtest)) {
+    install.packages("lmtest")
+    require(lmtest)
+}
+if (!require(margins)) {
+    install.packages("margins")
+    require(margins)
+}
+if (!require(ResourceSelection)) {
+    install.packages("ResourceSelection")
+    require(ResourceSelection)
+}
+if (!require(pROC)) {
+    install.packages("pROC")
+    require(pROC)
+}
+
+# install.packages("epitools") 
+# install.packages("MASS") 
+# install.packages("lmtest") 
+# install.packages("margins")
+# install.packages("ResourceSelection")
+# install.packages("pROC")
+```
 
 
 ## 1. Introduction 
@@ -64,12 +111,13 @@ We are going to examine Acute Respiratory Infection (ARI) according to a case de
 ### 2.2 Objectives
 
 The objectives of the analysis in this session are to determine:
+
 + Are people with chronic diseases at higher risk of ARI?
 +	What are the main risk factors for ARI in Australia?
 
 **Task 1: (10 minutes)** Open up the dataset “utri.csv” and inspect the datafile. The dataset has 19 variables, some of which we will not be examining today (month-absagesex_cat). Make sure you have set up your working directory, and prepared the R script.
 
-Below, you will see the data dictionary for utri.csv. The dataset is pretty clean, with most variables in numeric format. We may need to recode some variables as we go along. 
+Below, you will see the data dictionary for utri.csv (table 1). The dataset is pretty clean, with most variables in numeric format. We may need to recode some variables as we go along. 
 
 
 
@@ -127,7 +175,7 @@ We are going to look first to see whether the presence of chronic diseases incre
 
 a) In the command window type the following command:
 ``` {r}
-x <- table(utri$diabetes, utri$ARI)
+OR_dia_ari <- table(utri$diabetes, utri$ARI)
 ```
 
 b) Fill in the two-by-two table below putting the data in the respective cells
@@ -139,15 +187,32 @@ knitr::include_graphics("2by2.png")
 
 c) Calculate the odds ratio given by ad/bc. 
 
-*SHOW MANUAL CALCULATION USING R - not with package!*
+Step by step calculation:
 
 ```{r }
-#### add manual calculations here
+#### Manual
+a<- 5097 ### exposed with disease
+b <- 1290 ### exposed with no disease
+c <-439 ### non-exposed with disease
+d <- 84 ### non-exposed with no disease
 
+exposed <- a/b
+unexposed <- c/d
+
+OR_disease <- exposed/unexposed
 
 ```
 
-d)	Now subject the same variables to a logistic regression, by using the package “MASS” (install package first)
+Using the package `epitools` (install package first before R can utilise it from the library), which can also calculate the 95% confidence intervals:
+
+``` {r,eval=FALSE}
+#### if you want to use a package that will do this for you, load the epitools package. 
+library(epitools)
+oddsratio(OR_dia_ari, method ="wald")
+
+```
+
+d)	Now subject the same variables to a logistic regression, by using the package `MASS` (install package first)
 
 ```{r, eval=FALSE}
 ### Step 1: 
@@ -201,7 +266,7 @@ Now we are going to conduct logistic regressions of the remaining variables in t
 
 **Task 5: (10 minutes)** In the R script, type the following commands:
 
-```{r}
+```{r,eval=FALSE}
 vars <- list(utri$sex, utri$season)
  for (var in vars){
    # tabulate with ARI
@@ -224,9 +289,15 @@ Before we go any further, there are a couple of variables here that we should ex
 **Task 6: (5 minutes)** In the R script type the following commands:
 ```{r, eval=FALSE}
 table(utri$season, utri$ARI) 
-glm(utri$ARI~ utri$season, family = binomial(link = 'logit')) 
+### The GLM model 
+x2 <- glm(utri$ARI~ utri$season, family = binomial(link = 'logit')) 
+### To obtain the odds ratios: 
+exp(cbind("Odds ratio" = coef(x2), confint.default(x2, level = 0.95)))
 table(utri$location, utri$ARI)
-glm(utri$ARI~ utri$location, family = binomial(link = 'logit')) 
+### The GLM model 
+x3 <- glm(utri$ARI~ utri$location, family = binomial(link = 'logit')) 
+### To obtain the odds ratios: 
+exp(cbind("Odds ratio" = coef(x3), confint.default(x3, level = 0.95)))
 ```
 
 
@@ -236,18 +307,16 @@ glm(utri$ARI~ utri$location, family = binomial(link = 'logit'))
 
 
 **Task 7: (5 minutes)** In the R script, create a new variable called ‘rural’:
-```{r}
-	if(utri$location == 3 || utri$location==4){
-    utri$rural <- 1	  
-      } else utri$rural <- 0
-	utri$rural <- factor(utri$rural, levels = c(0,1), labels = c("No", "Yes"))
-	table(utri$ARI,utri$rural)
-#	      No  Yes
-#  0 5536    0
-#  1 1374    0
-  
-	### @@@@@@GLM MODEL NOT WORKING @@@@@@@@ 
-	#glm(utri$ARI~ utri$rural, family = binomial(link = 'logit')) 
+```{r,eval=FALSE}
+
+## 1 = "yes". i.e. "if location column states "Rural" or "Remote", then rural column entries will correspond to 1 (Yes), 0 = "no", i.e. if location column contains anything else, then rural column will correspond to 'no'
+utri$rural <- ifelse(utri$location =="Rural" | utri$location =="Remote", 1,0) ## creating the new variable "rural"
+utri$rural <- factor(utri$rural, levels = c(0,1), labels = c("No", "Yes")) #### this is where the yes/no labels are defined
+table(utri$ARI,utri$rural)
+
+### GLM model:
+	x4 <- glm(utri$ARI~ utri$rural, family = binomial(link = 'logit')) 
+	exp(cbind("Odds ratio" = coef(x4), confint.default(x4, level = 0.95)))
 ```
 
 
@@ -271,9 +340,11 @@ In this exercise, we are going to purposefully select covariates for inclusion i
 
 **Task 8: (5 minutes)** In the command line type commands for a logistic model, including all variables p<0.25 in univariable analysis, along with sex that might be expected to vary with age_cat:
 
-``` {r}
-##### @@@@@@ model not working @@@@@@
-#glm(ARI ~ sex + age_cat + season + asthma +immunocompromised+ household_size + diabetes + travel + rural + LOTE + ATSI,  family = binomial(link = 'logit'), data = utri)
+``` {r,eval=FALSE}
+
+glm(ARI ~ sex + age_cat + season + asthma +immunocompromised+ household_size + diabetes + travel + rural + LOTE + ATSI,  family = binomial(link = 'logit'), data = utri)
+
+
 ```
 
 **Review the output of the logistic model. What variables should we remove from the model?**
@@ -281,13 +352,13 @@ In this exercise, we are going to purposefully select covariates for inclusion i
     In the logistic model, there are several variables with p<0.05, including age_cat, sex, season, asthma, immunocompromised, household size, and rural. Interestingly, sex is now significant when included with age_cat, which may indicate that the association varies across age categories. These variables should be retained in the model and diabetes, travel, LOTE and ATSI removed.
 
 
-**Task 9: (10 minutes)** Run the full model and the reduced model, as we will compare them using a likelihood ratio test (you will need the 'lmtest' package for this). To do this we will store the estimates from the first model and compare them to the second. In the command line type:
+**Task 9: (10 minutes)** Run the full model and the reduced model, as we will compare them using a likelihood ratio test (you will need the `lmtest` package for this). To do this we will store the estimates from the first model and compare them to the second. In the command line type:
 
-```{r}
-#fm1 <- glm(ARI ~ sex + age_cat + season + asthma + immunocompromised+ household_size + diabetes + travel + LOTE + ATSI, family = binomial(link = 'logit'), data = utri)
-#fm2 <- glm(ARI ~ sex + age_cat + season + asthma + immunocompromised+ household_size, family = binomial(link = 'logit'),data = utri)
-#library(lmtest)
-#lrtest(fm1, fm2)
+```{r,eval=FALSE}
+fm1 <- glm(ARI ~ sex + age_cat + season + asthma + immunocompromised+ household_size + diabetes + travel + LOTE + ATSI, family = binomial(link = 'logit'), data = utri)
+fm2 <- glm(ARI ~ sex + age_cat + season + asthma + immunocompromised+ household_size, family = binomial(link = 'logit'),data = utri)
+library(lmtest)
+lrtest(fm1, fm2)
 
 ```
 
@@ -297,18 +368,19 @@ From this we can see that the Chi square test is p>0.05, which indicates that th
 
 Assessing interactions is a complex topic, as it involves assessing variation of effect in one variable across another. When the odds ratio for one variable is not constant over the levels of another, the two variables are said to have a statistical interaction. In this session, we are going to examine the potential interactions between two variables age_cat and sex. We might expect that the risk of ARI might vary across age groups by sex, particularly in females of childbearing age given the high prevalence of ARI in children.
 
-**Task 10: (10 minutes):** We will run a simple logistic regression model that includes an interaction term where sex and age are combined. margins is an effort to port Stata’s (closed source) margins command to R as an S3 generic method for calculating the marginal effects (or “partial effects”) of covariates included in model objects (like those of classes “lm” and “glm”).
+**Task 10: (10 minutes):** We will run a simple logistic regression model that includes an interaction term where sex and age are combined. The package `margins` is an effort to port Stata’s (closed source) margins command to R as an S3 generic method for calculating the marginal effects (or “partial effects”) of covariates included in model objects (like those of classes “lm” and “glm”).
 
-```{r}
+```{r,eval=FALSE}
 fm3 <- glm(ARI~ sex*age_cat, family = binomial(link = 'logit'), data = utri)
 library(margins)
-summary(margins(fm3))
+summary(margins(fm3))#### this allows you to obtain outputs that look similar to STATA
+margins(fm3) ### calculates the average marginal effects
 #to obtain predicted values of ARI from model fm3
 pred <- predict(fm3)
 #To calculate probability of ARI =1
 prob <- exp(pred)/(1+exp(pred))
 #To generate interaction plots
-interaction.plot(age_cat, sex, prob)
+interaction.plot(utri$age_cat, utri$sex, prob)
 ```
 
 When examining for interaction, we should interpret results as if it was a stratified analysis. We are looking to examine risks of sub-categories by combinations of variables. In a moderately large dataset like this one examining ARI, we are able to stratify over many levels of a variable, such as age_cat that has 18 levels when combined with sex.
@@ -326,26 +398,26 @@ While we can see there is a difference in the predicted probabilities of ARI by 
 
 ## 6.	Testing Model Fit 
 
-There are many different ways assessing whether a model fits the data adequately. The term ‘goodness of fit’ really means whether the probabilities produced by the model accurately reflect the data. To finish of the session, we will do two things—calculate some summary test statistics and examine how well the model classifies the data.
+There are many different ways assessing whether a model fits the data adequately. The term ‘goodness of fit’ really means whether the probabilities produced by the model accurately reflect the data. To finish of the session, we will do two things: calculate some summary test statistics (using the `ResourceSelection` package) and examine how well the model classifies the data (using the `pROC` package for visualisation).
 
 The Hosmer-Lemeshow goodness of fit test is one of the best ways of assessing the fit of logistic models. The Hosmer and Lemeshow goodness-of-fit test assesses predicted frequency and those observed in the data. A large p value for the Hosmer and Lemeshow test indicates a well-fitting model.
 
 
 **Task 11: (10 minutes):** Run the main effects model again and follow it up with some post-estimation commands. In the command line type:
 
-```{r}
+```{r,eval=FALSE}
 ## a. 
 fm4 <- glm(ARI ~ sex + age_cat + season + asthma +immunocompromised+ household_size, family = binomial(link = 'logit'), data = utri)
 ## b. 
 library(ResourceSelection)
-hoslem.test(ARI, fitted(fm4), g =10)
+hoslem.test(utri$ARI, fitted(fm4), g =10)
 ## c. to plot ROC curve
 prob=predict(fm4,type=c("response"))
 fm4$prob=prob
-library(pROC)
-g <- roc(ARI ~ prob, data = utri)
+library(pROC) ## allows you to visualise the ROC curve
+g <- roc(utri$ARI ~ prob)
 plot(g)  
-# d. to calculate AUC
+# d. to calculate AUC (area under the curve)
 auc(g)
 ```
 
