--- a/Logistic_Regression.Rmd
+++ b/Logistic_Regression.Rmd
@@ -131,7 +131,8 @@ utri <- read.csv("utri.csv")
 ```
 
 
-    The main outcome variable in this analysis is Acute Respiratory Infections (ARI). Cross tabulation with key variables age & sex reveal that:
+    The main outcome variable in this analysis is Acute Respiratory Infections (ARI). Cross tabulation with key 
+    variables age & sex reveal that:
     1.	females and older people appear to be over-represented in the survey,
     2.	the proportion of males and females reporting ARI was similar at 20%
     3.	younger children under 5 years of age were most likely to experience ARI
@@ -240,7 +241,8 @@ We need to exponentiate the results to provide us with an odds ratio for the ass
 
 **Task 3:**  Is diabetes associated with ARI? What about asthma?
 
-    From the univariate analysis, people with diabetes have a lower odds of ARI than people without, which is p < 0.05. For asthma, people with ARI had a higher odds than people without asthma. 
+    From the univariate analysis, people with diabetes have a lower odds of ARI than people without, which is 
+    p < 0.05. For asthma, people with ARI had a higher odds than people without asthma. 
 
 
 
@@ -263,7 +265,8 @@ We can see from the tabulation of ARI and age_cat that there are 9 levels of thi
 
 **What can we say about the association between age group and ARI from this analysis? What about sex as a risk factor?**
 
-    All age groups have a lower odds of ARI than 0–4 year old children. The odds ratio decreases relatively uniformly with the lowest risk in people 65 years or older. Age appears to be a strong risk factor for ARI and definitely should be included in future analyses. Males were equally likely to report ARI in the previous month compared to females and sex does not appear to be associated with infection.
+    All age groups have a lower odds of ARI than 0–4 year old children. The odds ratio decreases relatively uniformly with the lowest risk in people 65 years or older. Age appears to be a strong risk factor for ARI and definitely 
+    should be included in future analyses. Males were equally likely to report ARI in the previous month compared to females and sex does not appear to be associated with infection.
 
 
 ###3.2	Further analyses
@@ -310,7 +313,12 @@ exp(cbind("Odds ratio" = coef(x3), confint.default(x3, level = 0.95)))
 
 **What do you think about the odds ratios for these variables? What should we do with these when we proceed to including multiple variables in the model?**
 
-    The odds ratios are not consistent at different levels of these variables. In particular, winter had a markedly stronger association with ARI than the reference category, which was autumn. We should include this variable as indicator variables in future models. For location, the only level that was significantly associated with ARI compared with the baseline of capital/major city, which was for a rural area. Remote areas had very few study subjects. Here we should create one variable for rural/remote compared to urban and see if that is worth including in future models.
+    The odds ratios are not consistent at different levels of these variables. In particular, winter had a markedly 
+    stronger association with ARI than the reference category, which was autumn. We should include this variable as 
+    indicator variables in future models. For location, the only level that was significantly associated with ARI 
+    compared with the baseline of capital/major city, which was for a rural area. Remote areas had very few study 
+    subjects. Here we should create one variable for rural/remote compared to urban and see if that is worth 
+    including in future models.
 
 
 **Task 7: (5 minutes)** In the R script, create a new variable called ‘rural’:
@@ -359,7 +367,10 @@ glm(ARI ~ sex + age_cat + season + asthma +immunocompromised+ household_size + d
 
 **Review the output of the logistic model. What variables should we remove from the model?**
 
-    In the logistic model, there are several variables with p<0.05, including age_cat, sex, season, asthma, immunocompromised, household size, and rural. Interestingly, sex is now significant when included with age_cat, which may indicate that the association varies across age categories. These variables should be retained in the model and diabetes, travel, LOTE and ATSI removed.
+    In the logistic model, there are several variables with p<0.05, including age_cat, sex, season, asthma, 
+    immunocompromised, household size, and rural. Interestingly, sex is now significant when included with age_cat, 
+    which may indicate that the association varies across age categories. These variables should be retained in the 
+    model and diabetes, travel, LOTE and ATSI removed.
 
 
 **Task 9: (10 minutes)** Run the full model and the reduced model, as we will compare them using a likelihood ratio test (you will need the `lmtest` package for this). To do this we will store the estimates from the first model and compare them to the second. In the command line type:
@@ -453,7 +464,8 @@ The pROC package produces a ‘Receiver Operator Curve’ and calculates the are
 
 **Discuss the results of the goodness of fit tests. What do you think of the performance of the main effects model now?**
 
-    The Hosmer Lemeshow test indicates that the model is a good fit for the observed data. In terms of accurately classifying study subjects, the model did OK. The area under the ROC curve was 0.7, which indicates a reasonable fit to the data. In general, the model fits the data reasonably well.
+    The Hosmer Lemeshow test indicates that the model is a good fit for the observed data. In terms of accurately 
+    classifying study subjects, the model did OK. The area under the ROC curve was 0.7, which indicates a reasonable fit to the data. In general, the model fits the data reasonably well.
 
 
 ## 7.	Summary
